--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "GTM DataLayer Inspector",
-  "version": "1.1.8",
-  "description": "Inspect GTM dataLayer in Chrome DevTools",
+  "name": "GTM Inspector",
+  "version": "1.1.10",
+  "description": "Inspect GTM Inspector in Chrome DevTools",
   "permissions": [
     "activeTab"
   ],
